# flask_store

./: .gitignore  setup.cfg
flask_store/: __init__.py  admin.py  db.py  functions.py  store.py  users.json
flask_store/static/: base_admin.css  base_store.css  style.css  table_style.css
flask_store/static/css_folder/admin_panel/: base_admin.css  login_style.css  table_style.css
flask_store/static/css_folder/store/: 404_page.css  base_store.css  cart_page.css  category_page.css  detail_page.css  home_page.css
flask_store/static/js_folder/: jquery.lightbox_me.js
flask_store/static/js_folder/admin_panel/: base_admin.js
flask_store/static/js_folder/store/: cart.js
flask_store/static/json_folder/: categories.json  users.json
flask_store/templates/: 404_page.html  login.html
flask_store/templates/admin_panel/: base_admin.html  login.html  order.html  product.html  repository.html
flask_store/templates/store/: base_store.html  cart.html  category_page.html  detail.html  detail_page.html  finalize.html  home_page.html
instance/: config.py
