[metadata]
name = flask_store
version = 1.0.0
maintainer = Maktab42_python
maintainer_email = maktab42_python@gmail.com
description = This is a store web app that created by using of Flask.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    psycopg2

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flask_store
